--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -2,16 +2,27 @@
   <span class="welcome">Welcome{{ userDisplayName ? ', ' + userDisplayName : '' }}</span>
   <nav class="nav" [attr.aria-label]="showAdminNav ? 'Admin' : 'Main'">
     <ng-container *ngIf="showAdminNav">
+      <a routerLink="/home" class="navLink" routerLinkActive="navLinkActive" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+      <span class="sep">|</span>
       <a routerLink="/admin/users" class="navLink" routerLinkActive="navLinkActive" [routerLinkActiveOptions]="{ exact: true }">Users</a>
       <span class="sep">|</span>
       <a routerLink="/admin/cases" class="navLink" routerLinkActive="navLinkActive">Cases</a>
       <span class="sep">|</span>
       <a routerLink="/admin/affidavit" class="navLink" routerLinkActive="navLinkActive">Affidavit</a>
+      <span class="sep">|</span>
+      <a routerLink="/admin/query" class="navLink" routerLinkActive="navLinkActive">Query</a>
       <ng-container *ngIf="showUpcomingEventsLink">
         <span class="sep">|</span>
         <span class="navLinkWrap">
           <a routerLink="/upcoming-events" class="navLink" routerLinkActive="navLinkActive">Upcoming Events</a>
-          <span *ngIf="pendingActionsCount > 0" class="navBadge" [attr.aria-label]="'You have ' + pendingActionsCount + ' pending action(s)'"></span>
+          <span *ngIf="pendingActionsCount > 0" class="navBadge" [attr.aria-label]="'You have ' + pendingActionsCount + ' pending action(s)'">{{ pendingActionsCount }}</span>
+        </span>
+      </ng-container>
+      <ng-container *ngIf="showMessagesLink">
+        <span class="sep">|</span>
+        <span class="navLinkWrap">
+          <a routerLink="/messages" class="navLink" routerLinkActive="navLinkActive">Messages</a>
+          <span *ngIf="unreadMessagesCount > 0" class="navBadge" [attr.aria-label]="'You have ' + unreadMessagesCount + ' unread message(s)'">{{ unreadMessagesCount }}</span>
         </span>
       </ng-container>
       <ng-container *ngIf="showReportsLink">
@@ -22,6 +33,8 @@
       </ng-container>
     </ng-container>
     <ng-container *ngIf="!showAdminNav">
+      <a routerLink="/home" class="navLink" routerLinkActive="navLinkActive" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+      <span class="sep">|</span>
       <a routerLink="/my-cases" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive" [routerLinkActiveOptions]="{ exact: true }">My cases</a>
       <span class="sep">|</span>
       <a [routerLink]="['/profile']" [queryParams]="profileQueryParams" class="navLink" routerLinkActive="navLinkActive">Profile</a>
@@ -29,7 +42,14 @@
         <span class="sep">|</span>
         <span class="navLinkWrap">
           <a routerLink="/upcoming-events" class="navLink" routerLinkActive="navLinkActive">Upcoming Events</a>
-          <span *ngIf="pendingActionsCount > 0" class="navBadge" [attr.aria-label]="'You have ' + pendingActionsCount + ' pending action(s)'"></span>
+          <span *ngIf="pendingActionsCount > 0" class="navBadge" [attr.aria-label]="'You have ' + pendingActionsCount + ' pending action(s)'">{{ pendingActionsCount }}</span>
+        </span>
+      </ng-container>
+      <ng-container *ngIf="showMessagesLink">
+        <span class="sep">|</span>
+        <span class="navLinkWrap">
+          <a routerLink="/messages" class="navLink" routerLinkActive="navLinkActive">Messages</a>
+          <span *ngIf="unreadMessagesCount > 0" class="navBadge" [attr.aria-label]="'You have ' + unreadMessagesCount + ' unread message(s)'">{{ unreadMessagesCount }}</span>
         </span>
       </ng-container>
       <ng-container *ngIf="showReportsLink">
